2026-02-18T02:01:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22123503096 # 881
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-18
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 262 296 / 264 298
* notice: next accum: outdated-unq outdated-all / unq all: 262 296 / 264 298
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-02-02] / []

2026-02-17T01:57:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22083298199 # 880
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-17
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 262 296 / 264 298
* notice: next accum: outdated-unq outdated-all / unq all: 262 296 / 264 298
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-02-01] / []

2026-02-16T01:59:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22047598088 # 879
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-16
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 262 296 / 264 298
* notice: next accum: outdated-unq outdated-all / unq all: 262 296 / 264 298
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-29 2026-01-30 2026-01-31] / []

2026-02-13T02:04:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21971855672 # 876