@@ -1,3 +1,12 @@
+2026-02-20T01:55:39Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22208145659 # 883
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-20
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 262 296 / 264 298
+* notice: next accum: outdated-unq outdated-all / unq all: 262 296 / 263 297
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [] / []
+
 2026-02-18T02:01:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22123503096 # 881
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-18
